--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width">
 <meta charset="utf-8"/>
  <link rel="stylesheet" href="styl.css">
- <link rel="icon" href="favicon.png" type="image/png"/>
+ <link rel="icon" href="favicon.ico" type="image/ico"/>
   <style>
    nav{ 
 width: 10%;
@@ -55,13 +55,13 @@ nav, main {float:left;}
   </ul>
   <h3>Szablony</h3>
   <div>
-<a href="Oz017.github.io/szablony/szablonstrony1.html">
+<a href="IgorRachwal.github.io/szablony/szablonstrony1.html">
 Szablon strony 1
 </a>
-<a href="Oz017.github.io/szablony/szablonstrony2.html">
+<a href="IgorRachwal.github.io/szablony/szablonstrony2.html">
 Szablon strony 2
 </a>
-<a href="Oz017.github.io/szablony/szablonstrony3.html">
+<a href="IgorRachwal.github.io/szablony/szablonstrony3.html">
 Szablon strony 3
 </a>
   </div>
