--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width">
 <meta charset="utf-8"/>
  <link rel="stylesheet" href="styl.css">
- <link rel="icon" href="favicon.ico" type="image/ico"/>
+ <link rel="icon" href="favicon.ico" type="image/png"/>
   <style>
    nav{ 
 width: 10%;
