--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ nav, main {float:left;}
   </style>
 </head>
 <body>
- <header style="background: black; color: white;">
+ <header style="background: blue; color: white;">
   <h1>Witam na mojej stronie internetowej!- Igor Rachwał</h2>
  </header>
 
