--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ nav, main {float:left;}
   <h1>Witam na mojej stronie internetowej!- Igor Rachwał</h2>
  </header>
 
- <nav style="background:lightblue">
+ <nav style="background:lightcoral">
  <h2>Ćwiczenia z edycji i formatowania<br/>
  stron WWW</h2>
   <h3>Rozwiązania</h3>
