--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
-<meta name="viewport" content="width=device-width">
-<meta charset="utf-8"/>
- <link rel="stylesheet" href="styl.css">
- <link rel="icon" href="favicon.ico" type="image/ico"/>
-  <style>
-   nav{ 
-width: 10%;
-min-width: 160px;
-height: 900px;
-}
-   header{
- height: 50px;
-   }
-nav, main {float:left;}
+<!DOCTYPE html>
+<html lang="PL-pl">
+<head>
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
   </style>
 </head>
 <body>
  <header style="background: black; color: lightseagreen;">
-  <h1>Witam na mojej stronie internetowej!- Igor Rachwał</h2>
+  <h1>Witam na mojej stronie internetowej! - Igor Rachwał</h2>
  </header>
 
  <nav style="background:lightseagreen">
