--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
  </header>
 
  <nav style="background:lightseagreen">
- <h2>Ćwiczenia z edycji i formatowania<br/>
- stron WWW</h2>
+ <h2>Ćwiczenia z edycji i formatowania stron WWW</h2>
   <ul>
    <li>
 <a href="akapity.html">Akapity i listy</a>
