--- a/tekst.html
+++ b/tekst.html
@@ -19,7 +19,7 @@
   <hr/>
   <h2>Hiperłącze adresu e-mail:</h2>
   <div>
-<a href="19c.aleksander.ziembicki@ezse.pl">19c.aleksander.ziembicki@ezse.pl</a>
+<a href="19c.igor.rachwal@ezse.pl">19c.igor.rachwal@ezse.pl</a>
   </div>
   <hr/>
 <h1>Style formatowania</h1>
