--- a/css3-background.html
+++ b/css3-background.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <style>
 body {
-background-color: olive;
+background-color: lightsalmon;
 background-image: url(tlo1.jpg);
 background-repeat: no-repeat;
 background-attachment: scroll;
